--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "seed": "node seed.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^9.0.1",
     "mongoose": "^8.6.2"
   }
